--- a/package.json
+++ b/package.json
@@ -136,7 +136,12 @@
       "production": {
         "plugins": [
           [
-            "react-remove-properties", {"properties": ["dataTest"]}
+            "react-remove-properties",
+            {
+              "properties": [
+                "dataTest"
+              ]
+            }
           ]
         ]
       }
@@ -147,7 +152,9 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "enzyme-adapter-react-16": "^1.15.2",
+    "prop-types": "^15.7.2"
   }
 }
